[package]
name = "window_clipboard"
version = "0.1.0-alpha.1"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A library to obtain clipboard access from a `raw-window-handle`"
license = "MIT"
repository = "https://github.com/hecrj/iced"
documentation = "https://docs.rs/window_clipboard"
readme = "README.md"
keywords = ["clipboard", "window", "ui", "gui", "raw-window-handle"]
categories = ["gui"]

[dependencies]
raw-window-handle = "0.3"

[target.'cfg(windows)'.dependencies]
window_clipboard_windows = { version = "0.1", path = "./windows" }

[target.'cfg(target_os = "macos")'.dependencies]
window_clipboard_macos = { version = "0.1", path = "./macos" }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
window_clipboard_x11 = { version = "0.1", path = "./x11" }
window_clipboard_wayland = { version = "0.1", path = "./wayland" }

[dev-dependencies]
winit = "=0.20.0-alpha5"

[workspace]
members = [
  "macos",
  "wayland",
  "windows",
  "x11",
]
