[package]
name = "clipboard_macos"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A library to obtain access to the macOS clipboard"
license = "Apache-2.0"
repository = "https://github.com/hecrj/window_clipboard"
documentation = "https://docs.rs/clipboard_macos"
keywords = ["clipboard", "macos"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
